--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.19.0
   path_provider: ^2.1.3
   audioplayers: ^6.0.0
+  just_audio: ^0.9.39
 
 dev_dependencies:
   flutter_test:
